--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,8 +1,8 @@
-body,
+/* body,
 html {
     width: 100%;
-    align-items: center;
-}
+    align-items: center; */
+/* } */
 
 #root {
     width: 100%;
