--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,12 @@ a:hover {
 }
 
 body {
-    margin: auto;
+    /* margin: auto;
     display: flex;
     place-items: center;
-    min-width: 320px;
+    min-width: 320px; */
     min-height: 100vh;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 
 }
 
