--- a/src/style/spot.css
+++ b/src/style/spot.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -8,7 +8,7 @@ html, body {
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-}
+} */
 
 *, *::before, *::after {
   box-sizing: inherit; 
