--- a/src/style/spot.css
+++ b/src/style/spot.css
@@ -1,4 +1,4 @@
-html,
+/* html,*/
 body {
     margin: 0;
     padding: 0;
@@ -31,7 +31,6 @@ body {
 .form-box {
     max-height: 90vh;
     overflow-y: auto;
-    margin-top: 15%;
     width: 100%;
     background: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
