--- a/src/style/spot.css
+++ b/src/style/spot.css
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin-top: 15%;
 }
 
 /* Media queries remain mostly unchanged */
