--- a/src/style/spot.css
+++ b/src/style/spot.css
@@ -8,16 +8,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     max-width: 600px;
-    min-height: 80vh;
+    /* min-height: 80vh; */
     margin: auto;
 }
 
 .form-box {
     max-height: 90vh;
     overflow-y: auto;
-    width: 100%;
+    /* width: 100%; */
     background: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
