--- a/src/style/spot.css
+++ b/src/style/spot.css
@@ -16,7 +16,7 @@
 
 .form-box {
     max-height: 90vh;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     /* width: 100%; */
     background: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
