--- a/src/style/spot.css
+++ b/src/style/spot.css
@@ -3,23 +3,22 @@
 *::after {
     box-sizing: inherit;
 }
-
+/* body {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+} */
 .form-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width: 100%; */
     max-width: 600px;
-    /* min-height: 80vh; */
     margin: auto;
 }
 
 .form-box {
     max-height: 90vh;
-    /* overflow-y: auto; */
-    /* width: 100%; */
     background: white;
-    /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
     border-radius: 10px;
     padding: 20px;
     text-align: center;
@@ -27,38 +26,6 @@
     flex-direction: column;
     align-items: center;
 }
-
-/* Media queries remain mostly unchanged */
-/* @media screen and (max-width: 1024px) {
-    .form-container {
-        width: 90vw;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .form-container {
-        width: 90vw;
-        padding: 10px;
-    }
-
-    .form-box {
-        margin-top: 15%;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .form-container {
-        width: 95vw;
-    }
-
-    .form-box {
-        margin-top: 15%;
-    }
-
-    body {
-        overflow-x: auto;
-    }
-} */
 
 .pac-container {
     z-index: 2000 !important;
